log/build_2024-10-10_06-28-01/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener1.py", line 161
    def main("/laser3d/pointcloud"):
             ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

